--- a/DDxApp.html
+++ b/DDxApp.html
@@ -12,6 +12,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>PureWeb DDxClient</title>
+    
+    <script src="/HTML5/lib/broadway/broadway.min.js"></script>
     <script src="/HTML5/lib/closure-library/closure/goog/base.js"></script>
     <script src="/HTML5/src/code/deps.js"></script>
     <script src="/logConfig.js"></script>
