PW-3993 PW Integration checkpoint

--- a/DDxApp.html
+++ b/DDxApp.html
@@ -13,11 +13,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>PureWeb DDxClient</title>
     
-    <script src="/HTML5/lib/h264bsd/h264bsd.min.js"></script>
     <script src="/HTML5/lib/closure-library/closure/goog/base.js"></script>
     <script src="/HTML5/src/code/deps.js"></script>
     <script src="/logConfig.js"></script>
     <script src="/HTML5/src/code/pureweb/client.js"></script>
+    
+
+    <script src="/HTML5/lib/h264bsd/h264bsd.min.js"></script>
+    <script src="/HTML5/src/extras/H264Renderer.js"></script>    
+
     <script src="/ddxapp.js"></script>
 
     <script>
