PW-3993 Minor refactoring to h264 renderer to allow for easy inclusion in sample apps.

--- a/AsteroidsApp.html
+++ b/AsteroidsApp.html
@@ -48,5 +48,7 @@
             <div id="fireButton"  class="fireButton" ontouchstart="touchDown(event);" ontouchend="touchUp(event);" onmspointerup="touchUp(event);" onmspointerdown="touchDown(event);"></div>
             <div id="shieldsButton"  class="shieldsButton" ontouchstart="simKeyDown(event, SHIELDS_KEYCODE);" ontouchend="simKeyUp(event, SHIELDS_KEYCODE);" onmspointerup="simKeyUp(event, SHIELDS);" onmspointerdown="simKeyDown(event, SHIELDS);"></div>
         </div>
+        <!--Uncomment for access to the H264 decoder
+        <script src="/lib/pureweb/pureweb.h264.min.js"></script>-->
     </body>
 </html>
