--- a/ScribbleApp.html
+++ b/ScribbleApp.html
@@ -32,5 +32,7 @@
             <!-- This defines the view -->
             <div id="ScribbleView" class="purewebview" ></div>
         </div>
+        <!--Uncomment for access to the H264 decoder
+        <script src="/lib/pureweb/pureweb.h264.min.js"></script>-->
     </body>
 </html>
