--- a/DDxApp.html
+++ b/DDxApp.html
@@ -341,7 +341,7 @@
                 ddxclient.onOwnerSessionChanged);
     </script>
 
-    <!--Uncomment for access to the H264 decoder
-    <script src="/lib/pureweb/pureweb.h264.min.js"></script>-->
+    <!--Uncomment for access to the H264 decoder-->
+    <script src="/lib/pureweb/pureweb.h264.min.js"></script>
 </body>
 </html>
