PWEB-4142 Added logConfig.js to Asteroids in a comment for an easy example of how to turn up the logging.

--- a/AsteroidsApp.html
+++ b/AsteroidsApp.html
@@ -15,10 +15,11 @@
         <script src="/pureweb.js"></script>
         <script src="/bandwidth.js"></script>    
 		<link rel="stylesheet" href="/css/asteroidsapp.css"/>
-        <!-- Define the optional logging configuration in an external script -->
-        <script src="/logConfig.js"></script>
         <!-- END OF PRODUCTION REPLACE -->
-
+        
+        <!-- Define the optional logging configuration in an external script -->
+        <!--<script src="/logConfig.js"></script>-->
+        
     </head>
 
     <body onLoad="startAsteroids();">
