--- a/DDx/DDxApp.html
+++ b/DDx/DDxApp.html
@@ -18,7 +18,7 @@
     <script src="/logConfig.js"></script>
     <script src="/HTML5/src/code/pureweb/client.js"></script>
 
-    <script src="/ddxapp.js"></script>
+    <script src="/DDxApp.js"></script>
 
     <script>
         goog.require('goog.dom');
