PWEB-4745 More sample cleanup, stage and clean targets for all samples and meta rakefile

--- a/Asteroids/AsteroidsApp.html
+++ b/Asteroids/AsteroidsApp.html
@@ -10,8 +10,8 @@
 
         <script src="/lib/pureweb/pureweb.min.js"></script> 
         <!-- Include app specific code --> 
-        <script src="/AsteroidsApp.js"></script> 
-        <link rel="stylesheet" href="/css/asteroidsapp.css">              
+        <script src="/js/AsteroidsApp.js"></script> 
+        <link rel="stylesheet" href="/css/AsteroidsApp.css">              
     </head>
 
     <body onLoad="startAsteroids();">
