--- a/Scribble/ScribbleApp.html
+++ b/Scribble/ScribbleApp.html
@@ -8,8 +8,8 @@
         <script src="/lib/shake/shake.js"></script>
         <script src="/lib/pureweb/pureweb.min.js"></script> 
         <!-- Include app specific code --> 
-        <script src="/ScribbleApp.js"></script> 
-        <link rel="stylesheet" href="/css/scribbleapp.css"> 
+        <script src="/js/ScribbleApp.js"></script> 
+        <link rel="stylesheet" href="/css/ScribbleApp.css"> 
 
     </head>
     <body onLoad="startScribble();">
