--- a/DDx/DDxApp.html
+++ b/DDx/DDxApp.html
@@ -18,7 +18,7 @@
     <script src="/logConfig.js"></script>
     <script src="/HTML5/src/code/pureweb/client.js"></script>
 
-    <script src="/DDxApp.js"></script>
+    <script src="/js/DDxApp.js"></script>
 
     <script>
         goog.require('goog.dom');
@@ -40,7 +40,7 @@
         goog.require('pureweb.client.diagnostics.DiagnosticsPanel');
     </script>
 
-    <link rel="stylesheet" href="/css/ddxclient.css"></link>
+    <link rel="stylesheet" href="/css/DDxApp.css"></link>
     <link rel="stylesheet" href="/css/slider.css"></link>
     <link rel="stylesheet" href="/css/checkbox.css"></link>
     <link rel="stylesheet" href="/css/button.css"></link>
