PWEB-4745 Relative pathing for assets in clients

--- a/Asteroids/index.html
+++ b/Asteroids/index.html
@@ -8,10 +8,10 @@
 
         <title>PureWeb&#174; HTML5 Asteroids App Sample</title>
 
-        <script src="/lib/pureweb/pureweb.min.js"></script> 
+        <script src="./lib/pureweb/pureweb.min.js"></script> 
         <!-- Include app specific code --> 
-        <script src="/js/AsteroidsApp.js"></script> 
-        <link rel="stylesheet" href="/css/AsteroidsApp.css">              
+        <script src="./js/AsteroidsApp.js"></script> 
+        <link rel="stylesheet" href="./css/AsteroidsApp.css">              
     </head>
 
     <body onLoad="startAsteroids();">
