--- a/Scribble/index.html
+++ b/Scribble/index.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <title>PureWeb&#174; HTML5 Scribble App Sample</title>
-        <script src="/bower_components/shake.js/shake.js"></script>
-        <script src="/lib/pureweb/pureweb.min.js"></script> 
+        <script src="./bower_components/shake.js/shake.js"></script>
+        <script src="./lib/pureweb/pureweb.min.js"></script> 
         <!-- Include app specific code --> 
-        <script src="/js/ScribbleApp.js"></script> 
-        <link rel="stylesheet" href="/css/ScribbleApp.css"> 
+        <script src="./js/ScribbleApp.js"></script> 
+        <link rel="stylesheet" href="./css/ScribbleApp.css"> 
 
     </head>
     <body onLoad="startScribble();">
