PWEB-4745 Missed some paths in DDx

--- a/DDx/index.html
+++ b/DDx/index.html
@@ -37,10 +37,10 @@
         goog.require('ddxclient');        
     </script>
 
-    <link rel="stylesheet" href="/css/DDxApp.css"></link>
-    <link rel="stylesheet" href="/css/slider.css"></link>
-    <link rel="stylesheet" href="/css/checkbox.css"></link>
-    <link rel="stylesheet" href="/css/button.css"></link>
+    <link rel="stylesheet" href="./css/DDxApp.css"></link>
+    <link rel="stylesheet" href="./css/slider.css"></link>
+    <link rel="stylesheet" href="./css/checkbox.css"></link>
+    <link rel="stylesheet" href="./css/button.css"></link>
 
     <style>
         html, body {
@@ -337,6 +337,6 @@
     </script>
 
     <!--Uncomment for access to the H264 decoder-->
-    <script src="/lib/pureweb/pureweb.h264.min.js"></script>
+    <script src="./lib/pureweb/pureweb.h264.min.js"></script>
 </body>
 </html>
