--- a/Asteroids/index.html
+++ b/Asteroids/index.html
@@ -26,7 +26,7 @@
 		<!-- End of diagnostics panel -->
 
         <div id="wrapper">
-            <img id="backgroundImg" src="/img/background0.jpg"/>
+            <img id="backgroundImg" src="./img/background0.jpg"/>
 
             <!--  This defines the Asteroids View -->
             <div id="AsteroidsView" class="purewebview"></div>
