PWEB-4901 Added sound to HTML5 Asteroids client

--- a/Asteroids/index.html
+++ b/Asteroids/index.html
@@ -17,6 +17,7 @@
     <body onLoad="startAsteroids();">
         <div id="controls">
             <button id="setNameButton" onclick="getName();">Set Name</button>
+            <button id="attributionsButton" onclick="window.open('./sound/attributions.html')">Attributions</button>            
             <button id="shareButton" onclick="generateShareUrl();">Share</button>
             <div id="fps-counter" class="fps-counter">FPS:</div>
         </div>
