--- a/DDx/index.html
+++ b/DDx/index.html
@@ -256,12 +256,48 @@
         </div>
     </div>
 
+    <div id="cine_tab" style="width: 100%; height: 100%;">
+    <div id="cineview" class="purewebview" style="width: 100%; height: 100%; background-color:#ADADAD"></div>  
+		<div id="cineControls" style="position:absolute; bottom: 10px; left:10px; display:inline-flex;">
+        <span id="lblAutoPlay" >AutoPlay:</span>
+        <input id="autoPlay" type="checkbox" onclick="ddxclient.autoPlayCine(this);"></input>       
+        <button id="attachCinematic" onclick="ddxclient.attachCinematic();">Attach Cine</button>
+        <button disabled id="detachCinematic" onclick="ddxclient.detachCinematic();" >Detach Cine</button>
+        <button disabled id="rewind" onclick="ddxclient.rewind();" >|&lt;</button>
+        <button disabled id="playReverse" onclick="ddxclient.playReverse();" >&lt;&lt;</button>
+        <button disabled id="stepBack" onclick="ddxclient.stepBack();" >&lt;|</button>
+        <button disabled id="pause" onclick="ddxclient.pause();" >||</button>
+        <button disabled id="stepForward" onclick="ddxclient.stepForward();">|&gt;</button>       
+        <button disabled id="playForward" onclick="ddxclient.playForward();">&gt;&gt;</button>
+        <button disabled id="fastForward" onclick="ddxclient.fastForward();">&gt;|</button>
+
+        <span id="lblManDeltaT">Manual DeltaT:</span>
+        <input id="manualDeltaT" type="checkbox" onclick="ddxclient.manualCineDeltaT(this);"></input>
+
+        <div class="goog-inline-block" id="s-h" style="vertical-align: middle; margin-left:8px;">
+            <div id="deltaT" class="goog-slider" style="width: 150px; height: 20px">
+                <!-- Add a horizontal line to the slider -->
+                 <div style="position:absolute;
+                                width:100%;
+                                top:9px;
+                                border:1px inset white;
+                              overflow:hidden;
+                              height:0">
+                </div>
+              <div class="goog-slider-thumb"></div>
+            </div>
+        </div>
+        <span id="lblDeltaT">DeltaT</span>
+        <span id="lblDeltaTVal" >(-)</span>
+       </div>
+    </div>
+
     <div id="aspectandownership_tab" style="width: 100%; height: 100%;">
          <div id="aspectandownership" class="purewebview" style="width: 100%; height: 100%;"></div>
     </div>
 
     <div id="babel_tab" style="width:100%; height: 100%;">
-        <div id=pwDiagnosticsBabelUTFDiv" style="width:100%; height: 230px; overflow-y:scroll; ">
+        <div id="pwDiagnosticsBabelUTFDiv" style="width:100%; height: 230px; overflow-y:scroll; ">
             <table id='pwDiagnosticsBabelTable' style="width:100%">
                 <tr>
                     <th style="width:25%">Language</th><th style="width:25%">Phrase</th><th style="width:25%">Command Response</th><th style="width:25%">App State</th>
@@ -269,7 +305,7 @@
             </table>
           </div>
          <br/>
-         <div id=pwDiagnosticsBabelDataDiv" style="width:100%; height: 50%; overflow:auto;">
+         <div id="pwDiagnosticsBabelDataDiv" style="width:100%; height: 50%; overflow:auto;">
             <table id='pwDiagnosticsDataTypesTable' style="width:100%">
                 <tr>
                     <th style="width:25%">Data Type</th><th style="width:25%">Data</th><th style="width:25%">Command Response</th><th style="width:25%">App State</th>
@@ -297,6 +333,22 @@
           document.getElementById('lblGridSpace').innerHTML = '(' + s.getValue() + ')';
           ddxclient.gridSpacing_ValueChanged(s.getValue());
         });
+
+        var eld = document.getElementById('deltaT');
+        sd = new goog.ui.Slider();
+        sd.setMinimum(17);
+        sd.setMaximum(200);
+        sd.setBlockIncrement(1);
+        sd.setMoveToPointEnabled(true); //Better for touch UIs
+        sd.setValue(100);        
+        sd.decorate(eld);
+        sd.addEventListener(goog.ui.Component.EventType.CHANGE, function() {
+          var dv = sd.getValue();
+          var fps = (1000 / dv).toFixed(2);
+          document.getElementById('lblDeltaTVal').innerHTML = '(' + sd.getValue() + ' ms / ' + fps + ' fps)';
+          ddxclient.changeCineDeltaT(sd.getValue());
+        });
+
     </script>
 
     <script>
@@ -306,6 +358,8 @@
         tabPane.addPage(new goog.ui.TabPane.TabPage(document.getElementById('collaboration_tab'), 'Collaboration'));
         tabPane.addPage(new goog.ui.TabPane.TabPage(document.getElementById('aspectandownership_tab'), 'Aspect and Ownership'));
         tabPane.addPage(new goog.ui.TabPane.TabPage(document.getElementById('babel_tab'), 'Babel'));
+        tabPane.addPage(new goog.ui.TabPane.TabPage(document.getElementById('cine_tab'), 'Cine'));
+
 
         function tabChanged(event) {
             var index = event.currentTarget.getSelectedIndex();
@@ -315,8 +369,9 @@
                 ddxclient.pgView.resize();
             } else if (index === 3) {
                 ddxclient.ddxOwnershipView.resize();
-            }
-            
+            } else if (index === 5) {
+                ddxclient.ddxCineView.resize();
+            }            
         };
 
         goog.events.listen(tabPane, goog.ui.TabPane.Events.CHANGE, tabChanged);
