PWEB-5024 Changed HTML5 Asteroids client to use h.264 encoding format

--- a/Asteroids/index.html
+++ b/Asteroids/index.html
@@ -8,7 +8,8 @@
 
         <title>PureWeb&#174; HTML5 Asteroids App Sample</title>
 
-        <script src="./lib/pureweb/pureweb.min.js"></script> 
+        <script src="./lib/pureweb/pureweb.min.js"></script>
+        <script src="./lib/pureweb/pureweb.h264.min.js"></script>
         <!-- Include app specific code --> 
         <script src="./js/AsteroidsApp.js"></script> 
         <link rel="stylesheet" href="./css/AsteroidsApp.css">              
