PWEB-3236 Make DDx footer more visible on Safari (partial port from 4.1, reviewed in https://github.com/calgaryscientific/pureweb/pull/333)

--- a/DDx/index.html
+++ b/DDx/index.html
@@ -158,7 +158,7 @@
             <div id="ddxview2" class="purewebview" style="width: 50%; height: 50%; float: left;"></div>
             <div id="ddxview3" class="purewebview" style="width: 50%; height: 50%; float: left;"></div>
         </div>
-        <div id="ddxview_footer" style="position: absolute; bottom: 0px; height: 30px; vertical-align: middle; font-size: 12px; margin-left: 4px; vertical-align: middle;">
+        <div id="ddxview_footer" style="position: absolute; bottom: 0px; width: 100%; background-color: #ccc; vertical-align: middle; font-size: 12px; margin-left: 4px; vertical-align: middle;">
 
             <div style="display:inline-flex;">
                 Grid:
