--- a/DDx/index.html
+++ b/DDx/index.html
@@ -187,6 +187,7 @@
                 <button id="serviceServerPingButton" onclick="ddxclient.serviceServerPing();">Service-Server Ping</button>
                 <span id="serverServicePingReport">? ms</span>
                 <input id="chkInputTransmissionEnabled" type="checkbox" checked="on" onClick="ddxclient.onInputTransmissionEnabledClicked();">inputTransmissionEnabled</input>
+                <button id="rotateViewBkColorsBttn" onclick="ddxclient.rotateViewBkColors();" style="background-color:#00FFFF">Rotate View Bk Colors</button>                
             </div>
 
 
