--- a/DDx/index.html
+++ b/DDx/index.html
@@ -187,7 +187,8 @@
                 <button id="serviceServerPingButton" onclick="ddxclient.serviceServerPing();">Service-Server Ping</button>
                 <span id="serverServicePingReport">? ms</span>
                 <input id="chkInputTransmissionEnabled" type="checkbox" checked="on" onClick="ddxclient.onInputTransmissionEnabledClicked();">inputTransmissionEnabled</input>
-                <button id="rotateViewBkColorsBttn" onclick="ddxclient.rotateViewBkColors();" style="background-color:#00FFFF">Rotate View Bk Colors</button>                
+                <button id="rotateViewBkColorsBttn" onclick="ddxclient.rotateViewBkColors();" style="background-color:#00FFFF">Rotate View Bk Colors</button>            
+                <button id="addWindowBttn" onclick="ddxclient.addWindow();" style="background-color:#0066FF">Add Window</button>    
             </div>
 
 
