PWEB-5989 - Add forceResponse parameter to ISessionStorage.SetValue to force client response even if set is idempotent.

--- a/DDx/index.html
+++ b/DDx/index.html
@@ -334,7 +334,8 @@
               
               </table>
               New Key: <input type="text" id="newStorageKeyTextField"> New Value: <input type="text" id="newStorageValueTextField">
-              <button id='addKeyToStorage' onclick='ddxclient.addKeyToStorage();'>Set Key</button>        
+              <button id='addKeyToStorage' onclick='ddxclient.addKeyToStorage();'>Set Key</button>
+              <button id='setKeyForceResponse' onclick='ddxclient.setKeyForceResponse();'>Service Set Key/Force Response</button>
               <button id='pwDSessionStorageBroadcast' onclick='ddxclient.sessionStorageBroadcast();'>Service Broadcast Key</button>
               <button id='pwSessionStorageServiceKeys' onclick='ddxclient.queryServiceSessionStorageKeys();'>Query Service Keys</button>
            </div>
