--- a/Scribble/index.html
+++ b/Scribble/index.html
@@ -9,7 +9,7 @@
         <script src="./lib/pureweb/pureweb.min.js"></script> 
         <!-- Include app specific code --> 
         <script src="./js/ScribbleApp.js"></script> 
-        <script src="./bower_components/libsodium.js/dist/browsers/combined/sodium.min.js"></script>
+        <script src="./lib/pureweb/pureweb.sodium.min.js"></script>
         <link rel="stylesheet" href="./css/ScribbleApp.css"> 
 
     </head>
