--- a/Asteroids/index.html
+++ b/Asteroids/index.html
@@ -11,6 +11,7 @@
         <script src="./lib/pureweb/pureweb.min.js"></script>
         <!-- Include app specific code --> 
         <script src="./js/AsteroidsApp.js"></script> 
+        <script src="./lib/pureweb/pureweb.sodium.min.js"></script>
         <link rel="stylesheet" href="./css/AsteroidsApp.css">              
     </head>
 
