--- a/DDx/index.html
+++ b/DDx/index.html
@@ -15,8 +15,10 @@
     
     <script src="./bower_components/closurelibrary/closure/goog/base.js"></script>
     <script src="./bower_components/closurelibrary/closure/goog/deps.js"></script>
+
     <script src="./lib/pureweb/pureweb.min.js"></script> 
     <script src="./js/DDxApp.js"></script>
+    <script src="./lib/pureweb/pureweb.sodium.min.js"></script>
 
     <script>
         goog.require('goog.dom');
